css/style.css
/* Mobile devices don't seem to like the <link> for some reason */
/* FIXME: Remove this someday, hopefully */
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&family=Fira+Sans:ital,wght@0,400;0,500;1,400;1,500&family=Montserrat:wght@550;700&display=swap');

/*
 * Variables
 */

:root {
	color-scheme: light dark;

	/* Colors & branding */
	--clr-brand-gray: #303028;
	--clr-brand-red: #cc0000;
	--clr-brand-white: #eee;

	--clr-transparent-black: #0006;
	--clr-slightly-transparent-black: #0009;

	--clr-glass-dark: #ffffff09;
	--clr-glass-dark-reflection: #ffffff18;
	--clr-glass: light-dark(#22222209, #ffffff09);
	--clr-glass-reflection: light-dark(#22222210, #ffffff18);
	--clr-glass-border: light-dark(#22222228, #ffffff28);

	/* Layout - General */
	--clr-text: light-dark(#000, #eee);
	--clr-bg: light-dark(#eee, #22221c);
	--clr-border: light-dark(#ddd, #282824);
	--clr-wedge-text: light-dark(#eee, #22221c);
	--clr-wedge-bg: light-dark(#282824, #eee);
	--clr-hex: #161613;

	/* Layout - Accents */
	--clr-accent: #ce001a;
	--clr-accent-light: #f62000;
	--clr-shade: #0005;
	--clr-shadow: var(--clr-transparent-black);
	--shadow-spread: 3em;

	/* Layout - Wedges */
	--wedge-angle: 2deg;
	/* Set wedge height to prevent gaps */
	--wedge-height: calc(var(--width-content) * tan(var(--wedge-angle))); /* Computed with width * sin(angle) / sin(90 - angle) */
	/* Prevent wedge margin from getting too extreme with computed vw */
	--wedge-margin: clamp(2rem, var(--wedge-height), 3.2rem);
	--wedge-text-size: 1.375rem;

	/* Navigation */
	--pad-block-nav: 1rem;
	--pad-inline-nav: 1rem;

	/* Alerts */
	--clr-banner: #d2d2d2;
	--clr-banner-border: #b0b0b0;
	--clr-banner-text: #222;
	--clr-banner-dark: #282824;
	--clr-banner-dark-border: #42423b;
	--clr-banner-dark-text: var(--clr-brand-white);
	--clr-banner-info: #55e1ff;
	--clr-banner-info-border: #00c7f2;
	--clr-banner-info-text: #222;
	--clr-banner-warning: #ffe33b;
	--clr-banner-warning-border: #ecca00;
	--clr-banner-warning-text: #222;
	--clr-banner-orange: #ffcb89;
	--clr-banner-orange-border: #ff993d;
	--clr-banner-orange-text: #222;
	--clr-banner-pink: #ffc6d3;
	--clr-banner-pink-border: #ff5078;
	--clr-banner-pink-text: #222;

	--pad-block-banner: 0.25rem;
	--pad-inline-banner: 0.75rem;

	/* Menu */
	--clr-menu-text: var(--clr-text);

	--size-menu-btn: 3rem;
	--size-menu-hamburger-spacing: 0.375rem;
	--size-menu-hamburger-width: 1.125rem;
	--size-menu-hamburger-height: 0.125rem;
	--spacing-menu-vertical: 0.5rem;
	--width-menu: 20rem;

	--transition-curve-menu: cubic-bezier(.3, .1, .7, .9);
	--transition-duration-menu: 300ms;

	/* Content */
	--size-text: 1.1rem;
	--border-content: 0.0625rem solid var(--clr-border);
	--spacing-content-vertical: 2rem;	
	--width-content: 1250px;
	--pad-content: max(2em, calc((100vw - var(--width-content)) / 2 + 2em));
	--clr-feature-text: #eee;
	--clr-faded-text: #eeea;
	--clr-faded-text-alt: #000a;
	--clr-quote: #888;

	/* Links & buttons */
	--clr-link: var(--clr-accent);
	--clr-link-active: var(--clr-accent-light);

	--clr-button: var(--clr-accent);
	--clr-button-hover: var(--clr-accent-light);
	--clr-button-text: var(--clr-brand-white);
	--clr-button-dark: #464643;
	--clr-button-dark-hover: #4d4d4a;
	--clr-button-coffee: #ffdd00;
	--clr-button-coffee-hover: #ffea00;

	/* Animations */
	--transition-curve-default: ease-in-out;
	--transition-curve: cubic-bezier(.18, .89, .32, 1.18);
	--transition-duration: 300ms;
	--transition-duration-btn: 100ms;
	--transition-duration-link: 300ms;
	--wedge-transition-deviation: 0.8;
}

/*
 * Layout reset / standardization
 */

* {
	margin: 0;
	padding: 0;
}

html, body {
	min-height: 100dvh;
}

body {
	background: var(--clr-hex) url('/assets/img/hex-bg.svg') repeat center / 168px 96.99px;
	font-family: "Fira Sans", sans-serif;
	font-size: var(--size-text);
}

#wrapper {
	display: flex;
	min-height: 100dvh;
	flex-direction: column;
}

/*
 * General layout
 */

/* General styling */
h1, h2, h3, h4, h5, h6 {
	font-family: "Montserrat", sans-serif;
	font-weight: 500;
}

p + div,
p + p,
p + section,
section + section,
section + p {
	margin-top: 1em;
}

blockquote {
	color: var(--clr-quote);
	text-align: left;
	border-left: 0.2em solid var(--clr-accent);
	padding: 0.5em 1.25em;
	margin-block: 1em;

	em {
		color: var(--clr-text);
		font-weight: 500;
	}
}

section.card {
	display: inline-flex;
	flex-direction: column;
	align-items: center;
	gap: 0.75em;
}
section.buttons {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;
	gap: 2em;
}
section.card + section.card {
	margin-top: 0;
}

.nowrap {
	wrap: nowrap;
}

.content {
	background: url(../assets/img/noise.svg) repeat, linear-gradient(var(--clr-bg));
	background-blend-mode: multiply;
	color: var(--clr-text);
	position: relative;
	width: 100dvw;
	left: 50%;
	right: 50%;
	z-index: 5;
	margin: 0 -50vw;
	padding: 0 var(--pad-content);
	flex: 1;

	/* Wedges */
	&::before {
		content: '';
		display: block;
		position: relative;
		background: inherit;
		margin-inline: calc(-1 * max(2em, ((100vw - var(--width-content)) / 2 + 2em)));
		height: var(--wedge-height);
		z-index: -1;
		box-shadow: 0 0 var(--shadow-spread) var(--clr-shadow);
		clip-path: inset(calc(-1 * var(--shadow-spread)) 0 0 0);
		border-top: var(--border-content);
		background-blend-mode: multiply;
	}

	&.left::before {
		transform-origin: bottom right;
		transform: skewY(var(--wedge-angle));
	}
	&.right::before {
		transform-origin: bottom left;
		transform: skewY(calc(-1 * var(--wedge-angle)));
	}
}
/* ... */

